# Robot-medis

./: README.md
dynamixel_control/: CMakeLists.txt  package.xml
dynamixel_control/config/: dynamixel.config
dynamixel_control/msg/: DynamixelPos.msg  DynamixelPosList.msg  DynamixelState.msg  DynamixelStateList.msg  DynamixelTorqueEnable.msg  SetPosition.msg
dynamixel_control/src/: dynamixel_bulk_control.py  dynamixel_control_node.py  dynamixel_sync_control.py  motion_control_node3.py  test.py
hardware_robot/: CMakeLists.txt  package.xml
hardware_robot/launch/: forward_kinematics.launch
hardware_robot/src/: forward_kinematics.py
moveit_config/: .setup_assistant  package.xml
moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  manipulator.srdf  ros_controllers.yaml  simple_moveit_controllers.yaml
moveit_config/launch/: gazebo.launch  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml
robot_description/: package.xml
robot_description/launch/: display.launch
robot_description/meshes/: base_link.STL
robot_description/urdf/: urdf_manipulator.csv  urdf_manipulator.urdf
robot_launch/: package.xml
robot_launch/launch/: forward_kineamtics.launch  forward_kinematics.launch
urdf_arm_manipulator/: CMakeLists.txt  package.xml
urdf_arm_manipulator/launch/: display.launch  gazebo.launch
urdf_arm_manipulator/meshes/: base_link.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL
urdf_arm_manipulator/rviz/: manipulator.rviz
urdf_arm_manipulator/urdf/: urdf_arm_manipulator.csv  urdf_arm_manipulator.urdf
(+8 files in other folders)
