<package format="2">
  <name>robot_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for manipulator robot</p>
    <p>This package contains configuration data, 3D models and launch files
for manipulator robot</p>
  </description>
  <author>Didik</author>
  <maintainer email="didik@student.undip.ac.id" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>